improve layout with custom CSS Grid thin-column, added to daily.css - prevent text column overspill and adjust spacing from image in CSS Grid layout

--- a/css/daily.css
+++ b/css/daily.css
@@ -1,36 +1,57 @@
-/* DAILY EXERCISES*/
+/* DAILY*/
 
 
 #daily {
-    padding: 200px 100px;
-  }
-  
-  .exercisetips {
-    font-size: 34px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 800;
-    color: #c2c0c0;
-    margin-top: 10px;
-    text-transform: uppercase;
-  }
-  .daily-subheader {
-    font-family: "Montserrat", sans-serif;
-    font-size: 25px;
-    font-weight: 550;
-    line-height: 1.2;
-    margin-bottom: 30px;
-    margin-top:12rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-  }
-  .daily-img {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: -3rem;
-    margin-left: 15rem;
-    width: 70%;
-    border-radius: 10px;
-  }
-    
+  padding: 200px 100px;
+
+}
+
+.exercisetips {
+  font-size: 34px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  color: #c2c0c0;
+  margin-top: 10px;
+  text-transform: uppercase;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  /* The first column is thinner (1/3) and the second is wider (2/3) */
+}
+
+.thin-column {
+  grid-column: 1;
+}
+
+.daily-subheader {
+  font-family: "Montserrat", sans-serif;
+  font-size: 25px;
+  font-weight: 550;
+  line-height: 1.2;
+  margin-bottom: 30px;
+  margin-top: 12rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.daily-description {
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+  margin-bottom: 40px;
+  padding: 40px;
+}
+
+.daily-img {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -3rem;
+  margin-left: 15rem;
+  width: 70%;
+  border-radius: 10px;
+}
